// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Influencer badge tests Should contain link which is passed via props 1`] = `
.c0 {
  font-size: small;
  font-style: italic;
}

<div>
  <span
    class="ant-typography ant-typography-secondary c0"
  >
    this FUQ has been influenced by 
    <a
      href="/test-link"
    >
      this FUQ
    </a>
  </span>
</div>
`;

exports[`Influencer badge tests Should not render if no url is passed 1`] = `<div />`;

exports[`Influencer badge tests Should render with no errors 1`] = `
.c0 {
  font-size: small;
  font-style: italic;
}

<div>
  <span
    class="ant-typography ant-typography-secondary c0"
  >
    this FUQ has been influenced by 
    <a
      href="/"
    >
      this FUQ
    </a>
  </span>
</div>
`;
